<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.pieter.pieterkronemeijer_pset1.MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="353dp">

        <ImageView
            android:id="@+id/imageViewBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/body"
            app:srcCompat="@drawable/body" />

        <ImageView
            android:id="@+id/imageViewArms"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/arms"
            app:srcCompat="@drawable/arms" />

        <ImageView
            android:id="@+id/imageViewEars"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/ears"
            app:srcCompat="@drawable/ears" />

        <ImageView
            android:id="@+id/imageViewEyebrows"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/eyebrows"
            app:srcCompat="@drawable/eyebrows" />

        <ImageView
            android:id="@+id/imageViewEyes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/eyes"
            app:srcCompat="@drawable/eyes" />

        <ImageView
            android:id="@+id/imageViewHat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/hat"
            app:srcCompat="@drawable/hat" />

        <ImageView
            android:id="@+id/imageViewGlasses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/glasses"
            app:srcCompat="@drawable/glasses" />

        <ImageView
            android:id="@+id/imageViewMouth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/mouth"
            app:srcCompat="@drawable/mouth" />

        <ImageView
            android:id="@+id/imageViewMustache"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/mustache"
            app:srcCompat="@drawable/mustache" />

        <ImageView
            android:id="@+id/imageViewNose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/nose"
            app:srcCompat="@drawable/nose" />

        <ImageView
            android:id="@+id/imageViewShoes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/shoes"
            app:srcCompat="@drawable/shoes" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="191dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/hat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@android:color/holo_green_light"
                android:checked="true"
                android:onClick="buttonClicked"
                android:text="@string/hat" />

            <CheckBox
                android:id="@+id/eyebrows"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@android:color/holo_green_light"
                android:checked="true"
                android:duplicateParentState="false"
                android:onClick="buttonClicked"
                android:text="@string/eyebrows" />

            <CheckBox
                android:id="@+id/nose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@android:color/holo_green_light"
                android:checked="true"
                android:onClick="buttonClicked"
                android:text="@string/nose" />

            <CheckBox
                android:id="@+id/mustache"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@android:color/holo_green_light"
                android:checked="true"
                android:onClick="buttonClicked"
                android:text="@string/mustache" />

            <CheckBox
                android:id="@+id/arms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@android:color/holo_green_light"
                android:checked="true"
                android:onClick="buttonClicked"
                android:text="@string/arms" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/eyes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@android:color/holo_green_light"
                android:checked="true"
                android:onClick="buttonClicked"
                android:text="@string/eyes" />

            <CheckBox
                android:id="@+id/glasses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@android:color/holo_green_light"
                android:checked="true"
                android:onClick="buttonClicked"
                android:text="@string/glasses" />

            <CheckBox
                android:id="@+id/mouth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@android:color/holo_green_light"
                android:checked="true"
                android:onClick="buttonClicked"
                android:text="@string/mouth" />

            <CheckBox
                android:id="@+id/ears"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@android:color/holo_green_light"
                android:checked="true"
                android:onClick="buttonClicked"
                android:text="@string/ears" />

            <CheckBox
                android:id="@+id/shoes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@android:color/holo_green_light"
                android:checked="true"
                android:onClick="buttonClicked"
                android:text="@string/shoes" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
